--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
     
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open quiz1.html",
-            "file": "c:\\Users\\dj\\OneDrive\\Documents\\CSCI 225\\workspace-javascript\\JSON.html"
+            "name": "Open index.html",
+            "file": "c:\\Users\\dj\\OneDrive\\Documents\\CSCI 225\\workspace-javascript\\index.html"
         }
     ]
 }
