--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\dj\\OneDrive\\Documents\\CSCI 225\\workspace-javascript\\index.html"
+            "file": "c:\\Users\\dj\\OneDrive\\Documents\\CSCI 225\\workspace-javascript\\element.html"
         }
     ]
 }
